# Backend-2021-VkEducation

./: .env.dev  .env.prod  .gitignore  Makefile  README.md  docker-compose.yml  elastic.md  pyproject.toml
django/: Dockerfile
hw1/: README.md  exceptions.py  game.py  main.py  test_game.py
hw2/: README.md  custom_list.py  custom_meta.py  test_custom_list.py  test_custom_meta.py
hw3/: README.md  ab_gunicorn  ab_nginx  ab_proxy_gunicorn  app.py  start.sh
hw3/public/: index.html  nginx.conf
hw9/async/: fetcher.py  urls
hw9/threading/: client.py  server.py  urls  worker.py
metroim/: README.md  fill_db.py  stations.json
metroim/api/: decorators.py  serializers.py  stations.json  tasks.py  urls.py  views.py
metroim/application/: celery.py  local_settings.py  settings.py  urls.py
metroim/templates/: base.html  index.html  logout.html
metroim/ui/: admin.py  documents.py  models.py  serializers.py  urls.py  views.py  viewsets.py
metroim/ui/migrations/: 0001_initial.py  0002_auto_20211115_0652.py  0003_remove_station_slug.py  0004_remove_line_slug.py  0005_alter_station_order.py  0006_auto_20211121_1739.py  0007_remove_city_slug.py  0008_auto_20211213_0623.py
metroim/user/: decorators.py  documents.py  models.py  serializers.py  urls.py  views.py  viewsets.py
metroim/user/migrations/: 0001_initial.py  0002_user_favorite_stations.py
nginx/: nginx.conf
utils/: test_utils.py  utils.py
