[tool.poetry]
name = "backend-2021-vkeducation"
version = "0.1.0"
description = "package for homeworks vk.education"
authors = ["amir kamolov <kamolov.amir2000@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
