[tool.poetry]
name = "backend-2021-vkeducation"
version = "0.1.0"
description = "package for homeworks vk.education"
authors = ["amir kamolov <kamolov.amir2000@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Django = "^3.2.9"
django-cors-headers = "^3.10.0"
psycopg2 = "^2.9.2"
djangorestframework = "^3.12.4"
Markdown = "^3.3.6"
django-filter = "^21.1"
drf-spectacular = "^0.21.0"
social-auth-app-django = "^5.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
